--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="aaa" style="background-image:url('bgimage/zimardie.jpg')">
    <p id="theus" style="display:none;">This Website is Destroyed!<br>Refresh this page to recover</p>
-   <div id="mainer">
+   <div id="mainer" onclick="history.back()">
 	<p title="Perusak Persahabatan 2.5 or NamaOrtu 2.5" id="HeadP">Perusak Persahabatan 2.5<br><span style="font-size:20px;padding-top:5px;">(Update 21/09/2018)</span></p>
 	<div id="kontendua" style="float:right;">
 		 <p>Action:</p>
