--- a/welcome.html
+++ b/welcome.html
@@ -2,15 +2,15 @@
 <html lang="id">
 <head>
 	<meta charset="UTF-8">
-	<title>NamaOrtu 2.5 - Welcome Screen</title>
+	<title id="taitel">NamaOrtu 2.5 - Welcome Screen</title>
 	<link rel="stylesheet" type="text/css" href="css/titlestyle.css">
 	<link rel="icon" href="src/ico/zimardienaser.ico">
 	<script type="text/javascript" src="js/startup.js"></script>
 </head>
 <body id="badan">
    <div id="main">
-	<div id="header">
-		<p>Welcome to NamaOrtu/Perusak Persahabatan v2.5<br><span style="font-size:20px;padding-top:5px;">(Update 21/09/2018)</span></p>
+	<div id="header" onclick="location.reload();">
+		<p>Welcome to NamaOrtu/Perusak Persahabatan v2.5.0<br><span style="font-size:20px;padding-top:5px;">(Update 21/09/2018)</span></p>
 	</div>
 	<div id="content">
 	   <div id="maku">
@@ -19,7 +19,7 @@
 	   <br>
 	   <p style="font-size:20px;margin-bottom:5px;margin-top:2px;">Kelas 8.1 - 28th Generation</p>
 		<a href="src/index.html">
-		 <img id="Gambar" src="https://scontent-sit4-1.cdninstagram.com/vp/43f463068c5827041492eaf85be6a6e9/5BC83BBA/t51.2885-15/e35/22157961_280311375791235_5726509604045586432_n.jpg" title="28th Generation Kelas 8.1, Click here to continue" alt="28th Generation Kelas 8.1" style="width:512px;height:340px;">
+		 <img id="Gambar" src="img/octounus.jpg" alt="28th Generation Kelas 8.1" style="width:512px;height:340px;">
 	 	</a>
 		<p id="notif">Click this image to continue</p>
 		<div id="btn">
@@ -30,7 +30,7 @@
 	<div id="footer">
 		<br>
 		<hr>
-		<p>Copyright 2018 <a href="https://github.com/NoobProgrammer26">GSOFT INC.</a><br>Copyright 2018 <a href="https://github.com/BadAccuracyID">EFNL CO.</a></p>
+		<p>Copyright 2018 <a href="https://github.com/NoobProgrammer26" target="_blank">GSOFT INC.</a><br>Copyright 2018 <a href="https://github.com/BadAccuracyID" target="_blank">EFNL CO.</a></p>
 		<hr>
 		<a href="https://github.com/BadAccuracyID/Nama-Ortu">
 		<p>Source code for Android</p>
